--- a/lang/CityToCountry.csv
+++ b/lang/CityToCountry.csv
@@ -742,3 +742,101 @@ svalsatwest;
 leskovac;
 sibenik2;
 grumantbyen;
+zacatecas;
+fresnillo;
+rioverde;
+tamasopo;
+ojuelos;
+salinas;
+matehuala;
+tamazunchale;
+sanluisp;
+cedral;
+charcas;
+ahualulco;
+elnaranjo;
+rcatorce;
+vreyes;
+xilitla;
+vzaragoza;
+venegas;
+maiz;
+illescas;
+villa_g;
+moctezumaslp;
+valles;
+aquismon;
+pinos;
+durango;
+guamuchil;
+tlalte;
+culiacan;
+cuencame;
+ixtlan_rio;
+parral;
+sanblas;
+canatlan;
+jalpa;
+canelas;
+conchaoro;
+tamazula;
+sombre;
+gomez_p;
+valpa;
+santiagopap;
+guanacevi;
+compostela;
+huejuq;
+gpeical;
+aguasca;
+nvo_vallarta;
+jerez;
+calvillo;
+stamaoro;
+mazatlan;
+tecuala;
+lacruz;
+acaponeta;
+riogrande;
+jimenez;
+tepic;
+el_salto;
+mapimi;
+huazamota;
+villanueva;
+vicentegro;
+gpevictoria;
+cosala;
+colotlan;
+jesusma;
+mezquital;
+chalchi;
+punta_prie;
+hermosillo;
+puerto_pena;
+caborca;
+los_mochis;
+agua_prieta;
+tijuana;
+guaymas;
+yecora;
+cabo_sanluc;
+sonoyta;
+santa_rosa;
+san_felipe;
+el_rosario;
+ensenada;
+moctezuma;
+navojoa;
+cd_obregon;
+mexicali;
+punta_abreo;
+loreto;
+guasave;
+cananea;
+la_paz;
+h_nogales;
+santa_ana;
+puerto_sanc;
+bahia_tortu;
+guerrero_ne;
