--- a/lang/Default/cargo_translate.txt
+++ b/lang/Default/cargo_translate.txt
@@ -393,3 +393,326 @@ hardware;
 man_tr;
 reindeer;
 seafood;
+
+acetylene;
+acid;
+air_mails;
+aircft_tires;
+aircond;
+aljoinery;
+almond;
+ammunition;
+apples;
+apples_c;
+aquariums;
+arsenic;
+asph_miller;
+atl_cod_flt;
+backfl_prev;
+barley;
+basil;
+beans;
+beef_meat;
+beer;
+beverages;
+beverages_c;
+big_bag_seed;
+boric_acid;
+bottle_water;
+brake_fluid;
+bricks;
+cable_reel;
+can_sardines;
+canned_beans;
+canned_beef;
+canned_fish;
+canned_pork;
+canned_tuna;
+car_balt1;
+car_balt2;
+car_it;
+caravan;
+carb_water;
+carbn_pwdr_c;
+carengines;
+carrots;
+carrots_c;
+cars_fr;
+cauliflower;
+caviar;
+cement;
+cement_dry;
+cheese;
+chem_sorb_c;
+chem_sorbent;
+chemicals;
+chewing_gums;
+chicken_meat;
+chimney_syst;
+chlorine;
+chocolate;
+clothes;
+clothes_c;
+coal;
+coconut_milk;
+coconut_oil;
+comp_process;
+concen_juice;
+concr_beams;
+concr_beams2;
+concr_cent;
+concr_stair;
+cont_trees;
+contamin;
+copp_rf_gutt;
+corks;
+cott_cheese;
+cut_flowers;
+cyanide;
+desinfection;
+diesel;
+diesel_gen;
+digger1000;
+digger500;
+diggers;
+dozer;
+driller;
+dryers;
+drymilk;
+elect_wiring;
+electronics;
+empty_barr;
+empty_palet;
+emptytank;
+excav_soil;
+excavator;
+exhausts_c;
+explosives;
+fertilizer;
+fireworks;
+fish_chips;
+floorpanels;
+flour;
+fluorine;
+forklifts;
+fresh_fish;
+froz_octopi;
+frozen_hake;
+frsh_herbs;
+fuel_oil;
+fuel_tanks;
+fueltanker;
+furniture;
+garlic;
+glass;
+glass_packed;
+gnocchi;
+goat_cheese;
+granite_cube;
+grapes;
+graph_grease;
+grass_rolls;
+gravel;
+guard_rails;
+gummy_bears;
+hardware;
+harvest_bins;
+hchemicals;
+helicopter;
+hipresstank;
+hmetal;
+honey;
+hwaste;
+hydrochlor;
+hydrogen;
+ibc_cont;
+icecream;
+iced_coffee;
+iron_pipes;
+iveco_vans;
+kerosene;
+ketchup;
+lamb_stom;
+largetubes;
+lavender;
+lead;
+limonades;
+live_catt_fr;
+live_cattle;
+liver_paste;
+locomotive;
+logs;
+lpg;
+lumber;
+magnesium;
+maple_syrup;
+marb_blck;
+marb_blck2;
+marb_slab;
+mason_jars;
+med_equip;
+med_vaccine;
+mercuric;
+metal_beams;
+metal_cans;
+metal_center;
+metal_pipes;
+milk;
+mobile_crane;
+mondeos;
+moto_tires;
+motor_oil;
+motor_oil_c;
+motorcycles;
+mozzarela;
+mtl_coil;
+natur_rubber;
+neon;
+nitrocel;
+nitrogen;
+nonalco_beer;
+nuts;
+nylon_cord;
+oil;
+oil_filt_c;
+oil_filters;
+olive_oil;
+olives;
+onion;
+oranges;
+ore;
+outdr_flr_tl;
+overweight;
+packag_food;
+paper;
+pears;
+peas;
+perfor_frks;
+pesticide;
+pesto;
+pet_food;
+pet_food_c;
+petrol;
+phosphor;
+plant_substr;
+plast_film;
+plast_film_c;
+plastic_gra;
+plumb_suppl;
+plums;
+pnut_butter;
+polyst_box;
+pork_meat;
+post_packag;
+pot_flowers;
+potahydro;
+potassium;
+potatoes;
+precast_strs;
+princess;
+prosciutto;
+protec_cloth;
+radiators;
+re_bars;
+refl_posts;
+reindeer;
+rice;
+rice_c;
+roller;
+roof_tiles;
+roofing_felt;
+rooflights;
+rye;
+salm_fillet;
+salt_spice_c;
+salt_spices;
+sand;
+sandwch_pnls;
+sausages;
+sawpanels;
+scaffoldings;
+scania_tr;
+scooters;
+scrap_metals;
+seafood;
+seal_bearing;
+sheep_wool;
+shock_absorb;
+silica;
+smokd_eel;
+smokd_sprats;
+sodchlor;
+sodhydro;
+sodium;
+soy_milk;
+spher_valves;
+sq_tub;
+steel_cord;
+stone_dust;
+stone_wool;
+stones;
+straw_bales;
+sugar;
+sulfuric;
+tableware;
+tomatoes;
+toys;
+tracks;
+tractor;
+tractors;
+train_part;
+train_part2;
+transformat;
+transmis;
+truck_batt;
+truck_batt_c;
+truck_rims;
+truck_rims_c;
+truck_tyres;
+tube;
+tyres;
+used_battery;
+used_packag;
+used_plast;
+used_plast_c;
+vent_tube;
+vinegar;
+vinegar_c;
+volvo_cars;
+volvo_tr;
+wallpanels;
+watermelons;
+wheat;
+windml_eng;
+windml_tube;
+wood_bark;
+wooden_beams;
+wrk_cloth;
+wshavings;
+yacht;
+yogurt;
+young_seed;
+
+crude_oil;
+frac_tank;
+harvester;
+pellet_afood;
+salt;
+
+crude_oil;
+frac_tank;
+harvester;
+pellet_afood;
+salt;
+
+crude_oil;
+frac_tank;
+harvester;
+pellet_afood;
+salt;
+
+crude_oil;
+frac_tank;
+harvester;
+pellet_afood;
+salt;
