--- a/lang/Default/cities_translate.txt
+++ b/lang/Default/cities_translate.txt
@@ -592,3 +592,704 @@ zrenjanin;
 zuta;
 zuta2;
 zwolle;
+
+aalborg;
+aarhus;
+aberdeen;
+aberystwyth;
+akko;
+akranes;
+akureyri;
+alajarvi;
+alban;
+alexandroup;
+amsterdam;
+ancona;
+andorra;
+antwerp;
+aqaba;
+arad;
+are;
+arnhem;
+ashdod;
+ashkelon;
+augustow;
+aurach;
+bacau;
+bado;
+balti;
+balvi;
+barcelona;
+bari;
+basel;
+bayonne;
+beersheva;
+beirut;
+belda;
+belfast;
+beograd;
+bergen;
+berlin;
+bern;
+bialystok;
+bilbao;
+birmingham;
+birsay;
+bitola;
+blonduos;
+bobolice;
+bologna;
+bolungarvik;
+bonn;
+bordeaux;
+borgarnes;
+bourges;
+bratislava;
+bremen;
+bremerhaven;
+brest;
+brno;
+broadford;
+brussel;
+bucuresti;
+budapest;
+burg;
+busko;
+byblos;
+bydgoszcz;
+bystrica;
+cagliari;
+cairnryan;
+calais;
+cambridge;
+canfranc;
+canterbury;
+cardiff;
+carlisle;
+cassino;
+catania;
+catanzaro;
+chelmsford;
+chisinau;
+cieszyn;
+civaux;
+clermont;
+cluj;
+constanta;
+craiova;
+croydon;
+czluchow;
+damietta;
+daugavpils;
+debrecen;
+dijon;
+dimona;
+dombas;
+donostia;
+dortmund;
+douglas;
+dover;
+drammen;
+dresden;
+dublin;
+duisburg;
+dumfries;
+dusseldorf;
+dziwnowek;
+edinburgh;
+eilat;
+eindhoven;
+eingedi;
+elarish;
+elblag;
+elk;
+erfurt;
+esbjerg;
+europabr;
+evie;
+felixstowe;
+firenze;
+fishguard;
+flensburg;
+folkestone;
+forst;
+frankfurt;
+fraserburgh;
+frederikshv;
+ftwilliam;
+furth;
+galway;
+gavle;
+gdansk;
+gdynia;
+gedser;
+geisel;
+geneve;
+genova;
+glasgow;
+golfech;
+gorzow;
+goteborg;
+graz;
+grimsby;
+groedig;
+groningen;
+grudziadz;
+grumantbyen;
+gusev;
+gyor;
+haifa;
+hainburg;
+halle;
+hamar;
+hamburg;
+hammerfest;
+hannover;
+haparanda;
+hawes;
+heilbronn;
+helsingborg;
+helsinki;
+herning;
+herzliya;
+hiorthhamn;
+hirtshals;
+hofn;
+holmavik;
+holstebro;
+holyhead;
+honningsvag;
+huesca;
+hull;
+ilowa;
+ilza;
+innsbruck;
+inverness;
+ioannina;
+irun;
+isafjordur;
+ivalo;
+jaca;
+jekabpils;
+jericho;
+jerusalem;
+joensuu;
+jonkoping;
+jonquera;
+jyvaskyla;
+kaliningrad;
+kalix;
+kalmar;
+kandalaksha;
+kapellskar;
+karlskrona;
+karlstad;
+karsamaki;
+kassel;
+katowice;
+kaunas;
+kavala;
+keflavik;
+kemi;
+kemijarvi;
+kiel;
+kielce;
+kirkenes;
+kirkwall;
+kittila;
+klagenfurt;
+klaipeda;
+klaksvik;
+kobenhavn;
+koblenz;
+kokkola;
+kolding;
+kolka;
+koln;
+kosice;
+koszalin;
+kotka;
+kouvola;
+krafla;
+kragujevac;
+krakow;
+kristiansand;
+kristianstad;
+kristiinank;
+krosno;
+kunda;
+kuopio;
+lahti;
+larnaka;
+larne;
+larochelle;
+laurent;
+lefkosia;
+lehavre;
+leipzig;
+lellinge;
+lemans;
+lemesos;
+leskovac;
+liege;
+liepaja;
+lille;
+lillehammer;
+limerick;
+limoges;
+linkoping;
+linz;
+lisburn;
+liverpool;
+livorno;
+ljubljana;
+ljugarn;
+lleida;
+lodz;
+london;
+londonderry;
+longyearbyem;
+longyearbyen;
+loviisa;
+lublin;
+luga;
+luxembourg;
+lyon;
+magdeburg;
+mainz;
+malmo;
+manchester;
+mannheim;
+manresa;
+maribor;
+mariehamn;
+marseille;
+mazeikiai;
+messina;
+metz;
+miedzyzdroje;
+mikkeli;
+milano;
+mlada;
+moerdijk;
+montana;
+montpellier;
+mragowo;
+mukacheve;
+munchen;
+murmansk;
+naantali;
+nantes;
+napoli;
+narbonne;
+narva;
+netanya;
+newcastle;
+nice;
+nikel;
+nis;
+novisad;
+nowogard;
+nurnberg;
+nynashamn;
+oban;
+oberhausen;
+obsteig;
+odense;
+ohrid;
+olbia;
+olkiluoto;
+olomouc;
+olsztyn;
+olszyna;
+opole;
+oppdal;
+oradea;
+orebro;
+orkanger;
+orleans;
+ornskoldsvik;
+osijek;
+oslo;
+osnabruck;
+ostersund;
+ostrava;
+ostroleka;
+ostrowm;
+otta;
+oulu;
+padborg;
+pafos;
+paldiski;
+palermo;
+paluel;
+pamplona;
+panevezys;
+paris;
+parma;
+parnu;
+pau;
+pecs;
+perpignan;
+perth;
+pescara;
+petersburg;
+piatra;
+pila;
+pleven;
+ploce;
+plock;
+plymouth;
+pori;
+porthmadog;
+portree;
+portsaid;
+portsmouth;
+poznan;
+prague;
+prilep;
+przemysl;
+pskov;
+ptolemaida;
+radom;
+ramallah;
+ramsey;
+reims;
+rennes;
+reutte;
+reydar;
+reykjavik;
+rezekne;
+riga;
+rijeka;
+rishon;
+roadworks_a7;
+roma;
+ronne;
+roscoff;
+rostock;
+rotterdam;
+rovaniemi;
+ruse;
+rzeszow;
+salzburg;
+sangerhausen;
+sangiovanni;
+sanok;
+sassari;
+sayda;
+selfoss;
+senj;
+seydis;
+sheffield;
+siauliai;
+sibenik;
+sibenik2;
+sibiu;
+siedlce;
+skelleftea;
+skopje;
+slbrod;
+sligo;
+sodankyla;
+soderhamn;
+sodertalje;
+soria;
+sosnovy_bor;
+southampton;
+split;
+stargard;
+stavanger;
+sthelier;
+stockholm;
+stornoway;
+stranraer;
+strasbourg;
+strzelcekraj;
+stuttgart;
+subotica;
+sundsvall;
+suwalki;
+suzzara;
+svalsateast;
+svalsatwest;
+swansea;
+swinoujscie;
+szczecin;
+szeged;
+taba;
+tallinn;
+tampere;
+tanabru;
+taranto;
+tartu;
+telaviv;
+terni;
+teruel;
+thessaloniki;
+thurso;
+timisoara;
+torino;
+tornio;
+torshavn;
+toulouse;
+travemunde;
+trelleborg;
+trieste;
+trinity;
+tripolilb;
+trnava;
+trondheim;
+truckstope45;
+turku;
+tyr;
+uelzen;
+ukmerge;
+ullapool;
+ulm;
+umea;
+uppsala;
+utena;
+utsjoki;
+uzhhorod;
+vaasa;
+vaduz;
+valencia;
+valmiera;
+vantaa;
+varkaus;
+vasaros;
+vasteraas;
+vaxjo;
+venezia;
+ventspils;
+verkhnetulom;
+verona;
+vestmann;
+viborg;
+vidin;
+viitasaari;
+vik;
+vilnius;
+vinaros;
+visby;
+vranje;
+vyborg;
+walcz;
+warszawa;
+wexford;
+wick;
+wien;
+wiesbaden;
+wroclaw;
+ystad;
+zadar;
+zagreb;
+zahle;
+zamosc;
+zaragoza;
+zgierz;
+zgorzelec;
+zrenjanin;
+zurich;
+zuta;
+zuta2;
+zwolle;
+
+acaponeta;
+agua_prieta;
+aguasca;
+ahualulco;
+aquismon;
+bahia_tortu;
+cabo_sanluc;
+caborca;
+calvillo;
+cananea;
+canatlan;
+canelas;
+cd_obregon;
+cedral;
+chalchi;
+charcas;
+colotlan;
+compostela;
+conchaoro;
+cosala;
+cuencame;
+culiacan;
+durango;
+el_rosario;
+el_salto;
+elnaranjo;
+ensenada;
+fresnillo;
+gomez_p;
+gpeical;
+gpevictoria;
+guamuchil;
+guanacevi;
+guasave;
+guaymas;
+guerrero_ne;
+h_nogales;
+hermosillo;
+huazamota;
+huejuq;
+illescas;
+ixtlan_rio;
+jalpa;
+jerez;
+jesusma;
+jimenez;
+la_paz;
+lacruz;
+loreto;
+los_mochis;
+maiz;
+mapimi;
+matehuala;
+mazatlan;
+mexicali;
+mezquital;
+moctezuma;
+moctezumaslp;
+navojoa;
+nvo_vallarta;
+ojuelos;
+parral;
+pinos;
+puerto_pena;
+puerto_sanc;
+punta_abreo;
+punta_prie;
+rcatorce;
+riogrande;
+rioverde;
+salinas;
+san_felipe;
+sanblas;
+sanluisp;
+santa_ana;
+santa_rosa;
+santiagopap;
+sombre;
+sonoyta;
+stamaoro;
+tamasopo;
+tamazula;
+tamazunchale;
+tecuala;
+tepic;
+tijuana;
+tlalte;
+valles;
+valpa;
+venegas;
+vicentegro;
+villa_g;
+villanueva;
+vreyes;
+vzaragoza;
+xilitla;
+yecora;
+zacatecas;
+
+acaponeta;
+agua_prieta;
+aguasca;
+ahualulco;
+aquismon;
+bahia_tortu;
+cabo_sanluc;
+caborca;
+calvillo;
+cananea;
+canatlan;
+canelas;
+cd_obregon;
+cedral;
+chalchi;
+charcas;
+colotlan;
+compostela;
+conchaoro;
+cosala;
+cuencame;
+culiacan;
+durango;
+el_rosario;
+el_salto;
+elnaranjo;
+ensenada;
+fresnillo;
+gomez_p;
+gpeical;
+gpevictoria;
+guamuchil;
+guanacevi;
+guasave;
+guaymas;
+guerrero_ne;
+h_nogales;
+hermosillo;
+huazamota;
+huejuq;
+illescas;
+ixtlan_rio;
+jalpa;
+jerez;
+jesusma;
+jimenez;
+la_paz;
+lacruz;
+loreto;
+los_mochis;
+maiz;
+mapimi;
+matehuala;
+mazatlan;
+mexicali;
+mezquital;
+moctezuma;
+moctezumaslp;
+navojoa;
+nvo_vallarta;
+ojuelos;
+parral;
+pinos;
+puerto_pena;
+puerto_sanc;
+punta_abreo;
+punta_prie;
+rcatorce;
+riogrande;
+rioverde;
+salinas;
+san_felipe;
+sanblas;
+sanluisp;
+santa_ana;
+santa_rosa;
+santiagopap;
+sombre;
+sonoyta;
+stamaoro;
+tamasopo;
+tamazula;
+tamazunchale;
+tecuala;
+tepic;
+tijuana;
+tlalte;
+valles;
+valpa;
+venegas;
+vicentegro;
+villa_g;
+villanueva;
+vreyes;
+vzaragoza;
+xilitla;
+yecora;
+zacatecas;
