--- a/lang/Default/companies_translate.txt
+++ b/lang/Default/companies_translate.txt
@@ -936,3 +936,331 @@ wurth;
 xxxl;
 zbyszko;
 zlecenie;
+
+aaa;
+acc;
+aci;
+aero_elblag;
+aerobalt;
+aerobalt_ru;
+agrominta;
+agrominta_a;
+agronord;
+albertheijn;
+aldn;
+alds;
+aquael;
+aria_fd_albg;
+aria_fd_esbj;
+aria_fd_jnpg;
+aria_fd_trbg;
+aria_nordic;
+ateria;
+auchan;
+audi;
+auhof;
+baltomors_ru;
+baltomorsk;
+batisse;
+batisse_base;
+batisse_hs;
+batisse_road;
+batisse_wind;
+bauhaus;
+bcp;
+bhb_raffin;
+bhv;
+biedronka;
+bilka;
+billa;
+biltema;
+bjork;
+blt;
+blt_ru;
+blt_yacht;
+blt_yacht_ru;
+bltmetal;
+bltmetal_ru;
+boisserie;
+boliden;
+bondi;
+bonus;
+bp_retail;
+budimex;
+budowa;
+c_navale;
+captiglo;
+cargoexpress;
+cargotras;
+castorama;
+cemelt_bas;
+cemelt_fl_ru;
+cemelt_fla;
+cemelt_hal;
+cemelt_win;
+cemex;
+cesare_smar;
+chimi;
+citronex;
+cnp;
+comoto;
+cont_port;
+cont_port_fr;
+cont_port_it;
+cont_port_ru;
+coop;
+costruzi_bas;
+costruzi_fla;
+costruzi_hal;
+costruzi_win;
+creamery;
+daf_dlr;
+daf_fac;
+dagli;
+dans_jardin;
+depo;
+dhl;
+dia;
+dino;
+domdepo;
+domdepo_ru;
+drekkar;
+eco;
+ee_paper;
+effo;
+egres;
+eimskip;
+elgiganten;
+eolo_lines;
+epicentrk;
+eroski;
+euroacres;
+eurogoodies;
+europcar;
+eviksi;
+eviksi_a;
+exomar;
+expert;
+fandwhr;
+fattoria_f;
+fcp;
+fintyre;
+fintyre_ru;
+fle;
+flex;
+fuel_depot;
+fui;
+gallia_ferry;
+gardshorn;
+globeur;
+gnt;
+gnt_auto;
+gomme_monde;
+gospodarstwo;
+hawesmarket;
+hb_grandi;
+heineken;
+hekla;
+hofer;
+huilant;
+iav;
+ibp;
+ice_gla;
+icelandair;
+ika_bohag;
+ika_ru;
+ikea;
+ikea_pl;
+ina;
+ina_dist;
+ini;
+isavia;
+isrfood;
+itcc;
+jadranska;
+jadranska1;
+jadranska2;
+jewson;
+jumbo;
+kaarfor;
+kaarfor2;
+kamen_ru;
+kaufland;
+kivi;
+kiwi;
+komfort;
+konstnr;
+konstnr_br;
+konstnr_hs;
+konstnr_wind;
+konzum;
+kronan;
+kuenenagelll;
+lacquide;
+ladoga;
+ladoga_ru;
+lafarge_t;
+landsvirkjun;
+lateds;
+leclerc;
+leroymerlin;
+libellula;
+lidl;
+lidl_centrum;
+likmerge;
+lintukainen;
+lisette_log;
+ljug_handel;
+lkw_walter;
+lkwlog;
+lukoil;
+lvr;
+m1;
+man_dlr;
+man_fac;
+marina;
+marina_fr;
+marina_it;
+marmo;
+maxima;
+mazet;
+mcdonalds;
+mediaexpert;
+mediamarkt;
+mercadona;
+metro;
+minimarket3;
+minimarket5;
+minimarket6;
+minimarket7;
+mostostal;
+ms_stein;
+mvm_carriere;
+n1;
+nbfc;
+nch;
+nch_ru;
+nd;
+netto;
+nord_crown;
+nord_sten;
+norr_food;
+norrsken;
+nos_pat;
+nos_pat_brg;
+nos_pat_cf;
+nos_pat_lhv;
+nosko;
+ns_chem;
+ns_chem_ru;
+ns_oil;
+ns_oil_ru;
+nucleon;
+obi;
+olis;
+omv1;
+omv2;
+omv3;
+omv4;
+onnelik;
+onnelik_a;
+orkan;
+orlen_retail;
+ot_port;
+pfi;
+piac;
+pk_medved_ru;
+pkn_orlen;
+plastimet;
+podlogi_elk;
+polar_fish;
+polarisline1;
+polarislines;
+port_blond;
+port_bolun;
+port_isa;
+port_sudavik;
+port_sudur;
+posped;
+pp_chimica;
+prisma;
+psa_ant;
+quadrelli;
+quarry;
+raben;
+radus;
+radus_ru;
+renar;
+renat;
+renault;
+rewe;
+roadworks_a7;
+roboty;
+rosmark;
+rosmark_ru;
+rybackie_elk;
+saab;
+sag_tre;
+sah_afurdir;
+sal;
+sal_fi;
+salag;
+samkaup;
+samskip;
+sanbuilders;
+sawmillforst;
+scania_dlr;
+scania_fac;
+seedvault;
+seljaland;
+sellplan;
+severoatm_ru;
+shell;
+shell_fac;
+sildarvinn;
+skn;
+skoda;
+smyril;
+snb;
+spinelli;
+stacja;
+stokes;
+subse;
+supernetto;
+suprema;
+suprema_ru;
+svalsat;
+szatmari;
+tartak;
+te_logistica;
+tesco;
+tesore_gust;
+timbursala;
+tradeaux;
+trameri;
+transinet;
+transwood;
+tras_med;
+tree_et;
+ukko;
+vegagerdin;
+vegagerdin_r;
+vest_port;
+viljo_paper;
+viln_paper;
+vitas_pwr;
+voitureux;
+volvo_dlr;
+volvo_fac;
+vpc;
+vsv;
+waberers;
+wgcc;
+willys;
+wilnet_trans;
+wurth;
+xxxl;
+zbyszko;
+zelenye;
+zelenye_a;
+zlecenie;
